# zephyr-course

l2-task1/: CMakeLists.txt
l2-task1/src/: main.c
l3-task1/: CMakeLists.txt  Kconfig
l3-task1/src/: main.c
l4-task1/: CMakeLists.txt  Kconfig
l4-task1/src/: main.c
l5-task1/: CMakeLists.txt
l5-task1/boards/my_stm32_board/: Kconfig.defconfig  Kconfig.my_stm32_board  board.cmake  board.yml  my_stm32_board.dts  my_stm32_board.yaml
l5-task2/: CMakeLists.txt  prj.conf
l5-task2/boards/my_board/: board.c  board.cmake  my_board.dts
l6-task/: CMakeLists.txt  Kconfig  prj.conf
l6-task/boards/my_board/: board.c  board.yml  my_board.dts
l6-task/driver/: CMakeLists.txt  Kconfig  my_driver.c
l6-task/driver/include/: my_driver.h
l6-task/dts/bindings/: my_driver,sensor.yml
l6-task/src/: main.c
